--- a/OOPGames/OOPGames/MainWindow.xaml
+++ b/OOPGames/OOPGames/MainWindow.xaml
@@ -29,7 +29,7 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
-                <Button x:Name="StartGame" Grid.Column="0" Content="Start New Game" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5,5,5,5" Click="StartGame_Click"/>
+                <Button x:Name="StartGame" Content="Start New Game" HorizontalAlignment="Center" Margin="0,5,0,3" Click="StartGame_Click"/>
                 <TextBox x:Name="Status" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="5,5,5,5" FontSize="18"/>
             </Grid>
         </Grid>
