--- a/OOPGames/OOPGames/MainWindow.xaml
+++ b/OOPGames/OOPGames/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OOPGames"
         mc:Ignorable="d"
-        Title="OOP Games" ResizeMode="CanResizeWithGrip" MinWidth="400" MinHeight="300" Closed="Window_Closed" KeyDown="Window_KeyDown" d:DesignHeight="341.379" d:DesignWidth="1000.995">
+        Title="OOP Games" ResizeMode="CanResizeWithGrip" MinWidth="400" MinHeight="300" Closed="Window_Closed" KeyDown="Window_KeyDown" KeyUp="Window_KeyUp" d:DesignHeight="341.379" d:DesignWidth="1000.995">
 
     <Window.Resources>
         <Style TargetType="Button">
